# jamb

./: .gitignore  Makefile.in  README.md  configure.ac
doc/: jamb.txt
inc/: audioplayable.hpp  errorcode.h  jamb.h  library.hpp  metadata.h  metadata.hpp  playable.hpp  player.h  player_manager.h  state.h  stream.h
players/miniaudio/: Makefile.in  conf.json  player.c
players/tmp/: conf.json  player
src/: errorcode.c  jamb.c  jamb.cpp  miniaudio.c  player.c  player_manager.c  state.c
